<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:wheel="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/soloud_login">


        <!--<TextView
            android:id="@+id/soloud_TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/promo_TV"
            android:layout_centerHorizontal="true"
            android:paddingBottom="16dp"
            android:text="@string/app_name"
            android:textColor="#ffffff"
            android:textSize="38sp" />-->

        <ImageView
            android:id="@+id/soloud_logo"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="36dp"
            android:background="@drawable/ic_launcher1" />

        <TextView
            android:id="@+id/promo_TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/promo_text"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:layout_below="@id/soloud_logo"
            android:layout_centerHorizontal="true"/>


        <TextView
            android:id="@+id/terms_and_policy_TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            tools:text="@string/terms_and_privacy_policy" />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/terms_and_policy_TV"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="24dp" />

        <com.pnikosis.materialishprogress.ProgressWheel
            android:id="@+id/progress_wheel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/terms_and_policy_TV"
            android:layout_below="@+id/login_button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="4dp"
            android:visibility="gone"
            tools:visibility="visible"
            wheel:matProg_barColor="@android:color/white"
            wheel:matProg_barWidth="2dp"
            wheel:matProg_progressIndeterminate="true" />

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>