...
    <string name="facebook_app_id">1625319744433880</string>
    <string name="fb_login_protocol_scheme">fb1625319744433880</string>

    <string name="nothing" />
    <string name="logout">Logout</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to Logout?</string>
    <string name="cancel">Cancel</string>

    <string name="preference_file_key">com.android.soloud.prefs</string>

    <string name="title_activity_advertisement_details">Advertisement Details</string>
    <string name="advertisement_description">Description</string>
    <string name="dialog_title_post_validation">Post Validation</string>
...
